mod: 修改跳转路径

--- a/apps/documenteditor/forms/index.html
+++ b/apps/documenteditor/forms/index.html
@@ -258,7 +258,7 @@
 
       <div class="toolbar" id="toolbar">
           <div class="group left">
-              <div class="margin-right-large"><a id="header-logo" class="brand-logo" href="http://www.onlyoffice.com/" target="_blank"></a></div>
+              <div class="margin-right-large"><a id="header-logo" class="brand-logo" href="./#/" target="_blank"></a></div>
               <span id="id-btn-prev-field" class="margin-right-small"></span>
               <span id="id-btn-next-field" class="margin-right-large"></span>
               <span id="id-btn-clear-fields"></span>
